assets/css/style.css
* {
    box-sizing: border-box;
    padding: 0;
    margin: 0; 
}

body {
    max-height: 100vh;
    text-align: center;
}

header {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    font-size: 2rem;
    min-height: 200px;
    max-height: 20vh;
    height: 20%;
}

footer {
    max-height: 20vh;
    font-size: 3rem;
}

.img-div img {
    max-width: 50vw;
    max-height: 50vh;
    margin-top: 15px;
    margin-bottom: 15px;
}

.card img {
    height: 18vh;
    width: 12vw;
    padding: 3px;
}

/* layout of the game-area section, trying to create enough space for the different game mods, so the
size of the area won't change for different game types. */
#game-area {
    width: 90%;
    height: 65vh;
    padding: 20px 20px;
    margin: auto;
    background-color: rgb(156, 156, 173);
}

button {
    font-size: 2rem;
    padding: 10px;
    margin: 0 15px;
}

.card {
    padding: 0;
}

#games-info {
    color: blue;
    text-decoration: underline solid;
}

/* Layout for the original game and possibly the others too. Might be subject to changes */
.cards-bttm {
    text-align:center;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-between;
}

/* Layout for the winner-loser showcase and for the div/divs */
.showcase-section {
    text-align:center;
    display: flex;
    flex-direction: column;
    align-items: stretch;
    justify-content: space-evenly;
}

.showcase-cards {
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.smaller img {
    height: 8vh;
    width: 5vw;
}

/* Simple result showcase for pc and human player score */

.game-result {
    margin-top: 3vh;
    display: flex;
    justify-content: space-evenly;
}

@media screen and (max-width: 1200px) {
    header, footer, button {
        font-size: 1.5rem;
    }
    .card img {
        height: 15vh;
        width: 20vw;
    }
    .img-div img {
        max-height: 40vh;
        max-width: 70vw;
    }
    .smaller img {
        height: 6vh;
        width: 10vw;
    }
}

@media screen and (max-width: 600px) {
    header, footer, button {
        font-size: 1rem;
    }

    header {
        min-height: 100px;
    }

    button {
        padding: 10px;
        margin: 0 10px;
    }
}

